force-app/main/default/objects/Recipe_Line_Item__c/Recipe_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Individual lines that must belong to a recipe</description>
    <label>Recipe Line Item</label>
    <nameField>
        <displayFormat>RL-{00000}</displayFormat>
        <label>Recipe Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>