force-app/main/default/objects/Recipe_Line_Item__c/fields/Formatted_Name__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Name__c</fullName>
    <formula>TEXT(Quantity__c) &amp; &apos; &apos; &amp;  TEXT(Unit__c) &amp; &apos; &apos; &amp; Ingredient__r.Name</formula>
    <label>Formatted Name</label>
    <type>Text</type>
</CustomField>