force-app/main/default/objects/Recipe_Line_Item__c/fields/Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Ingredient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ingredient associated with the current line of the recipe</description>
    <label>Ingredient</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Recipe Line Items</relationshipLabel>
    <relationshipName>Recipe_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>