force-app/main/default/objects/Recipe_Line_Item__c/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <description>Recipe that the current line item belongs to</description>
    <label>Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipLabel>Recipe Line Items</relationshipLabel>
    <relationshipName>Recipe_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>