force-app/main/default/objects/Recipe_Line_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Possible units of measurement for a recipe line item</description>
    <label>Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measurement</valueSetName>
    </valueSet>
</CustomField>